--- a/src/main/resources/assets/kismet/lang/en_US.lang
+++ b/src/main/resources/assets/kismet/lang/en_US.lang
@@ -13,17 +13,17 @@ gui.config.category.main=Kismet
 gui.config.category.main.tooltip=Kismet Configurations
 
 ## Config fields
-gui.config.hasChill=Enable Chill Display
-gui.config.hasChill.tooltip=Allows crafting of a display variant that doesn't impose a time limit (no streaks though)
-gui.config.hasTimed=Enable Timed Display
-gui.config.hasTimed.tooltip=Allows crafting of a display variant with an imposed time limit before resetting the goal
+gui.config.chill=Enable Chill Display
+gui.config.chill.tooltip=Allows crafting of a display variant that doesn't impose a time limit (no streaks though)
+gui.config.timed=Enable Timed Display
+gui.config.timed.tooltip=Allows crafting of a display variant with an imposed time limit before resetting the goal
 gui.config.timeLimit=Time between resets
 gui.config.timeLimit.tooltip=Defines how long you give the player between every new Kismet goal
 gui.config.category.list=Allowed Items
 gui.config.category.list.tooltip=Settings regarding the allowed/disallowed items to be picked as goals
 
-gui.config.list.isStrict=Strict Item Filtering
-gui.config.list.isStrict.tooltip=When true, Kismet will avoid picking any items that aren't craftable or present in any specific loot table\nWarning: Still applies if list is on whitelist mode, where it will further filter out the items present in the list
+gui.config.list.strict=Strict Item Filtering
+gui.config.list.strict.tooltip=When true, Kismet will avoid picking any items that aren't craftable or present in any specific loot table\nWarning: Still applies if list is on whitelist mode, where it will further filter out the items present in the list
 gui.config.list.listMode=List Mode
 gui.config.list.listMode.tooltip=Determines the behaviour of the item list bellow
 gui.config.list.list=Targeted Items List
