GUI now accepts shift-click Shift-click (and clicking in the target slot, as before) acts as if right-clicking the block with the stack    REALLY fun to do with keys ouo

--- a/src/main/resources/assets/kismet/lang/en_US.lang
+++ b/src/main/resources/assets/kismet/lang/en_US.lang
@@ -1,6 +1,6 @@
 # Blocks
-display.chillDisplay.name=Kismetic Display
-display.timedDisplay.name=Timed Kismetic Display
+tile.chillDisplay.name=Kismetic Display
+tile.timedDisplay.name=Timed Kismetic Display
 
 # Display
 tile.timedDisplay.tag.streak=Streak: %s
